--- a/Web/Bai2.html
+++ b/Web/Bai2.html
@@ -5,11 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Các tag cơ bản-Thuộc tính</title>
 </head>
+<!--<style pre {color: blue}></style>-->
 <body>
-    <H1 align = "center"x style="color: #006600">Bài 02: Sử dụng các tag cơ bản (tt)</H1>
+    <H1 align = "center", style="color: #006600; size: 2px;">Bài 02: Sử dụng các tag cơ bản (tt)</H1><br>
     <p>
-        <u style="color: #0000FF; font-weight:bold ">Yêu cầu:</u>
+        <u style="color: #0000FF; font-weight:bold ">Yêu cầu:</u><br><br>
+        <b>Thiết kế trang web có nội dung như sau:</b>
+        
     </p>
-    <H2 align = "center"; style="background-color: #FECFFD; color: #FF3399">MẸ !</H2>
+    <br>
+    <H2 align = "center"; style="background-color: #FECFFD; color: #FF3399">MẸ !</H2><br>
+    <pre align = "center"; style = "background-color: #FFFFCC">
+        <pre style="color: blue">
+        Mẹ là cả một trời thương <br>
+        Mẹ là cả một thiên đường trần gian<br>
+        Công ơn cha mẹ tựa biển trời.<br>
+        </pre>
+        <hr>
+        <pre style="color: red;">
+        Làm sao báo hiếu hỡi người ơi?<br>
+        Nếu chưa báo hiếu đường bắt hiểu<br>
+        Bất hiểu làm ta khổ muôn đời.<br>
+        </pre>
+        <hr>
+        <pre style="color: green;">
+        Một đời vốn liếng mẹ trao<br>
+        Mẹ cho tất vả mẹ nào giữ riêng<br>
+        Mẹ hiền như một bà tiên <br>
+        Mẹ theo con suốt hành trình con đi.
+        </pre>
+    </pre>
 </body>
 </html>
