--- a/Web/Bai2.html
+++ b/Web/Bai2.html
@@ -15,7 +15,7 @@
     </p>
     <br>
     <H2 align = "center"; style="background-color: #FECFFD; color: #FF3399">MẸ !</H2><br>
-    <pre align = "center"; style = "background-color: #FFFFCC">
+    <pre align = "center"; style = "background-color: #FFFFCC; margin: auto;">
         <pre style="color: blue">
         Mẹ là cả một trời thương <br>
         Mẹ là cả một thiên đường trần gian<br>
